# airlines-data-engineering

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
airflow/: README.md
airflow/dags/: zerog_data_processing_dag_loading.py  zerog_data_processing_dag_pax.py  zerog_data_processing_dag_sales.py
data/: README.md
data/ingest/pax/: pax 03 2019.csv  pax 04 2019.csv
data/ingest/sales/: Mar 19 Sales.xlsx  Sales Report April 2019.xlsx
infrastructure/: README.md
infrastructure/airflow/: .env  Dockerfile  pyproject.toml  requirements.txt
infrastructure/cassandra/init-scripts/: schema.cql
src/consumer/: loading_kafka_python_consumer.py  pax_kafka_python_consumer.py  sales_kafka_python_consumer.py
